dev/pyparser.py
from pylexer import Lexer

class Parser:
    def __init__(self, source):
        self._lexer = Lexer(source)
        self._indent_level = 0
    
    def _syntax_error(self, expected, actual):
        raise Exception("Syntax Error: Expected %s; Received %s" % (expected, actual)) 
    
    def _expect(self, expected):
        self._expect([ expected ])
    
    def _expect(self, expected_list):
        token_string, token_type = self._lexer.get_token()

        if token_type in expected_list:
            return token_string
        
        self._syntax_error(expected_list, token_type)

    def _expect_indent(self, indent_direction=1):
        _, next_type = self._lexer.peek_token()
        tab_count = 0
        expected_tab_count = self._indent_level + indent_direction

        while next_type == "TAB":
            self._expect("TAB")
            tab_count += 1
            _, next_type = self._lexer.peek_token()
        
        if tab_count == expected_tab_count:
            self._indent_level = expected_tab_count
        else:
            self._syntax_error("Tab level %d" % expected_tab_count, "Tab level %d" % tab_count)

    def _expect_dedent(self):
        self._expect_indent(indent_direction=-1)
    
    def parse(self):
        token_str, next_type = self._lexer.peek_token()
        stmt_first_set = []

        while next_type != "EOF":
            if next_type == "NEWLINE":
                self._expect("NEWLINE")
            elif next_type in stmt_first_set:
                self._parse_stmt()
            else:
                self._syntax_error(stmt_first_set + ["NEWLINE"], next_type)
            
            _, next_type = self._lexer.peek_token()

    def _parse_decorator(self):
        self._expect("AT")
        self._parse_dotted_name()

        token_str, next_type = self._lexer.peek_token()

        if next_type == "LPAREN":
            self._expect("LPAREN")
            argslist_first_set = []

            _, next_type = self._lexer.peek_token()

            if next_type in argslist_first_set:
                self._parse_arglist()
            
            self._expect("RPAREN")

        self._expect("NEWLINE")
    
    def _parse_decorators(self):
        self._parse_decorator()

        _, next_type = self._lexer.peek_token()
        decorator_first_set = []

        if next_type in decorator_first_set:
            self._parse_decorators()
    
    def _parse_decorated(self):
        self._parse_decorators()

        _, next_type = self._lexer.get_token()

        if next_type == "CLASS":
            self._parse_classdef()
        elif next_type == "DEF":
            self._parse_funcdef()
        else:
            self._parse_async_funcdef()
    
    def _parse_async_funcdef(self):
        self._expect("ASYNC")
        self._parse_funcdef()
    
    def _parse_funcdef(self):
        self._expect("DEF")
        self._expect("NAME")
        self._parse_parameters()

        _, next_type = self._lexer.peek_token()

        if next_type == "ARROW":
            self._expect("ARROW")
            self._parse_test()
        
        self._expect("COLON")
        self._parse_suite()
    
    def _parse_parameters(self):
        self._expect("LPAREN")
        
        typedargslist_first_set = []
        _, next_type = self._lexer.peek_token()

        if next_type in typedargslist_first_set:
            self._parse_typedargslist()

        self._expect("RPAREN")
    
    def _parse_typedargslist(self):
        tfpdef_first_set = []
        _, next_type = self._lexer.peek_token()

        if next_type in tfpdef_first_set:
            self._parse_tfpdef()
            _, next_type = self._lexer.peek_token()

            if next_type == "EQUAL":
                self._expect("EQUAL")
                self._parse_test()
                _, next_type = self._lexer.peek_token()
            
            if next_type == "COMMA":
                self._expect("COMMA")
                _, next_type = self._lexer.peek_token()

                if next_type == "STRING":
                    self._expect("STRING")
                    _, next_type = self._lexer.peek_token()
                
                while next_type in tfpdef_first_set:
                    self._parse_tfpdef()
                    _, next_type = self._lexer.peek_token()

                    if next_type == "EQUAL":
                        self._expect("EQUAL")
                        self._parse_test()
                        _, next_type = self._lexer.peek_token()
                    
                    if next_type == "STRING":
                        self._expect("STRING")
                        return  
                    
                    self._expect("COMMA")
                    _, next_type = self._lexer.peek_token()

                    if next_type == "STRING":
                        self._expect("STRING")
                        _, next_type = self._lexer.peek_token()
                
                if next_type == "SLASH":
                    self._expect("SLASH")
                    _, next_type = self._lexer.peek_token()

                    if next_type == "COMMA":
                        self._expect("COMMA")
                        _, next_type = self._lexer.peek_token()

                        if next_type == "STRING" or next_type in tfpdef_first_set:
                            if next_type == "STRING":
                                self._expect("STRING")
                                _, next_type = self._lexer.peek_token()
                            
                            self._parse_tfpdef()
                            _, next_type = self._lexer.peek_token()

                            if next_type == "EQUAL":
                                self._expect("EQUAL")
                                self._parse_test()
                                _, next_type = self._lexer.peek_token()
                            
                            if next_type == "STRING":
                                self._expect("STRING")
                            elif next_type == "COMMA":
                                self._expect("COMMA")
                                _, next_type = self._lexer.peek_token()

                                if next_type == "STRING":
                                    self._expect("STRING")
                                    _, next_type = self._lexer.peek_token()
                                
                                while next_type in tfpdef_first_set:
                                    self._parse_tfpdef()
                                    _, next_type = self._lexer.peek_token()

                                    if next_type == "EQUAL":
                                        self._expect("EQUAL")
                                        self._parse_test()
                                        _, next_type = self._lexer.peek_token()

                                    if next_type == "STRING":
                                        self._expect("STRING")
                                        parse_end = True
                                        break
                                    
                                    self._expect("COMMA")
                                    _, next_type = self._lexer.peek_token()

                                    if next_type == "STRING":
                                        self._expect("STRING")
                                
                                if next_type == "STRING":
                                    self._expect("STRING")
                                elif next_type == "ASTERISK":
                                    self._expect("ASTERISK")
                                    _, next_type = self._lexer.peek_token()

                                    if next_type in tfpdef_first_set:
                                        self._parse_tfpdef()
                                        _, next_type = self._lexer.peek_token()
                                    
                                    while next_type == "COMMA":
                                        self._expect("COMMA")
                                        _, next_type = self._lexer.peek_token()

                                        if next_type == "STRING":
                                            self._expect("STRING")
                                            _, next_type = self._lexer.peek_token()
                                        
                                        self._parse_tfpdef()
                                        _, next_type = self._lexer.peek_token()

                                        if next_type == "EQUAL":
                                            self._expect("EQUAL")
                                            self._parse_test()
                                            _, next_type = self._lexer.peek_token()
                                    
                                    if next_type == "STRING":
                                        self._expect("STRING")
                                    elif next_type == "COMMA":
                                        self._expect("COMMA")
                                        _, next_type = self._lexer.peek_token()

                                        if next_type == "STRING":
                                            self._expect("STRING")
                                            _, next_type = self._lexer.peek_token()
                                        
                                        if next_type == "POWER":
                                            self._expect("POWER")
                                            self._parse_tfpdef()

                                            _, next_type = self._lexer.peek_token()

                                            if next_type == "COMMA":
                                                self._expect("COMMA")
                                                _, next_type = self._lexer.peek_token()
                                            
                                            if next_type == "STRING":
                                                self._expect("STRING")
                                elif next_type == "POWER":
                                    self._expect("POWER")
                                    self._parse_tfpdef()
                                    _, next_type = self._lexer.peek_token()

                                    if next_type == "COMMA":
                                        self._expect("COMMA")
                                        _, next_type = self._lexer.peek_token()
                                    
                                    if next_type == "STRING":
                                        self._expect("STRING")

                            
                        elif next_type == "ASTERISK":
                            self._expect("ASTERISK")
                            _, next_type = self._lexer.peek_token()

                            if next_type in tfpdef_first_set:
                                self._parse_tfpdef()
                                _, next_type = self._lexer.peek_token()
                            
                            while next_type == "COMMA":
                                self._expect("COMMA")
                                _, next_type = self._lexer.peek_token()

                                if next_type == "STRING":
                                    self._expect("STRING")
                                    _, next_type = self._lexer.peek_token()
                                
                                self._parse_tfpdef()
                                _, next_type = self._lexer.peek_token()

                                if next_type == "EQUAL":
                                    self._expect("EQUAL")
                                    self._parse_test()
                                    _, next_type = self._lexer.peek_token()
                            
                            if next_type == "STRING":
                                self._expect("STRING")
                            elif next_type == "COMMA":
                                self._expect("COMMA")
                                _, next_type = self._lexer.peek_token()

                                if next_type == "STRING":
                                    self._expect("STRING")
                                    _, next_type = self._lexer.peek_token()
                                
                                if next_type == "POWER":
                                    self._expect("POWER")
                                    self._parse_tfpdef()

                                    _, next_type = self._lexer.peek_token()

                                    if next_type == "COMMA":
                                        self._expect("COMMA")
                                        _, next_type = self._lexer.peek_token()
                                    
                                    if next_type == "STRING":
                                        self._expect("STRING")
                        elif next_type == "POWER":
                            self._expect("POWER")
                            self._parse_tfpdef()
                            _, next_type = self._lexer.peek_token()

                            if next_type == "COMMA":
                                self._expect("COMMA")
                                _, next_type = self._lexer.peek_token()
                            
                            if next_type == "STRING":
                                self._expect("STRING")

                elif next_type == "ASTERISK":
                    self._expect("ASTERISK")
                    _, next_type = self._lexer.peek_token()

                    if next_type in tfpdef_first_set:
                        self._parse_tfpdef()
                        _, next_type = self._lexer.peek_token()
                    
                    while next_type == "COMMA":
                        self._expect("COMMA")
                        _, next_type = self._lexer.peek_token()

                        if next_type == "STRING":
                            self._expect("STRING")
                            _, next_type = self._lexer.peek_token()
                        
                        self._parse_tfpdef()
                        _, next_type = self._lexer.peek_token()

                        if next_type == "EQUAL":
                            self._expect("EQUAL")
                            self._parse_test()
                            _, next_type = self._lexer.peek_token()
                    
                    if next_type == "STRING":
                        self._expect("STRING")
                    elif next_type == "COMMA":
                        self._expect("COMMA")
                        _, next_type = self._lexer.peek_token()

                        if next_type == "STRING":
                            self._expect("STRING")
                            _, next_type = self._lexer.peek_token()
                        
                        if next_type == "POWER":
                            self._expect("POWER")
                            self._parse_tfpdef()

                            _, next_type = self._lexer.peek_token()

                            if next_type == "COMMA":
                                self._expect("COMMA")
                                _, next_type = self._lexer.peek_token()
                            
                            if next_type == "STRING":
                                self._expect("STRING")
                elif next_type == "POWER":
                    self._expect("POWER")
                    self._parse_tfpdef()
                    _, next_type = self._lexer.peek_token()

                    if next_type == "COMMA":
                        self._expect("COMMA")
                        _, next_type = self._lexer.peek_token()
                    
                    if next_type == "STRING":
                        self._expect("STRING")
                        
                    elif next_type == "STRING":
                        self._expect("STRING")

        elif next_type == "ASTERISK":
            self._expect("ASTERISK")
            _, next_type = self._lexer.peek_token()

            if next_type in tfpdef_first_set:
                self._parse_tfpdef()
                _, next_type = self._lexer.peek_token()
            
            while next_type == "COMMA":
                self._expect("COMMA")
                _, next_type = self._lexer.peek_token()

                if next_type == "STRING":
                    self._expect("STRING")
                    _, next_type = self._lexer.peek_token()
                
                self._parse_tfpdef()
                _, next_type = self._lexer.peek_token()

                if next_type == "EQUAL":
                    self._expect("EQUAL")
                    self._parse_test()
                    _, next_type = self._lexer.peek_token()
            
            if next_type == "STRING":
                self._expect("STRING")
            elif next_type == "COMMA":
                self._expect("COMMA")
                _, next_type = self._lexer.peek_token()

                if next_type == "STRING":
                    self._expect("STRING")
                    _, next_type = self._lexer.peek_token()
                
                if next_type == "POWER":
                    self._expect("POWER")
                    self._parse_tfpdef()

                    _, next_type = self._lexer.peek_token()

                    if next_type == "COMMA":
                        self._expect("COMMA")
                        _, next_type = self._lexer.peek_token()
                    
                    if next_type == "STRING":
                        self._expect("STRING")

        elif next_type == "POWER":
            self._expect("POWER")
            self._parse_tfpdef()
            _, next_type = self._lexer.peek_token()

            if next_type == "COMMA":
                self._expect("COMMA")
                _, next_type = self._lexer.peek_token()
            
            if next_type == "STRING":
                self._expect("STRING")

        else:
            self._syntax_error(tfpdef_first_set + [ "ASTERISK", "POWER" ], next_type)

    def _parse_tfpdef(self):
        self._expect("NAME")
        _, next_type = self._lexer.peek_token()

        if next_type == "COMMA":
            self._expect("COMMA")
            self._parse_test()
    
    def _parse_varargslist(self):
        _, next_type = self._lexer.peek_token()
        vfpdef_first_set = []

        if next_type == "ASTERISK":
            self._expect("ASTERISK")
            _, next_type = self._lexer.peek_token()

            if next_type in vfpdef_first_set:
                self._parse_vfpdef()
                _, next_type = self._lexer.peek_token()
            
            if next_type == "COMMA":
                self._expect("COMMA")
                
                _, next_type = self._lexer.peek_token()

                if next_type in vfpdef_first_set:
                    self._parse_vfpdef()

                    _, next_type = self._lexer.peek_token()

                    if next_type == "EQUAL":
                        self._expect("EQUAL")
                        self._parse_test()
                        _, next_type = self._lexer.peek_token()
                    
                    while next_type == "COMMA":
                        self._expect("COMMA")
                        self._parse_vfpdef()

                        _, next_type = self._lexer.peek_token()

                        if next_type == "EQUAL":
                            self._expect("EQUAL")
                            self._parse_test()
                            _, next_type = self._lexer.peek_token()
                            
                elif next_type == "POWER":
                    self._expect("POWER")
                    self._parse_vfpdef()
                    _, next_type = self._lexer.peek_token()

                    if next_type == "COMMA":
                        self._expect("COMMA")

                else:
                    self._syntax_error(vfpdef_first_set + [ "POWER" ], next_type)

        elif next_type == "POWER":
            self._expect("POWER")
            self._parse_vfpdef()
            _, next_type = self._lexer.peek_token()

            if next_type == "COMMA":
                self._expect("COMMA")

        else:
            self._parse_vfpdef()
            
            _, next_type = self._lexer.peek_token()

            if next_type == "EQUAL":
                self._expect("EQUAL")
                self._parse_test()
                _, next_type = self._lexer.peek_token()

            if next_type == "COMMA":
                self._expect("COMMA")

                _, next_type = self._lexer.peek_token()

                if next_type in vfpdef_first_set:
                    self._parse_vfpdef()

                    _, next_type = self._lexer.peek_token()

                    if next_type == "EQUAL":
                        self._expect("EQUAL")
                        self._parse_test()
                        _, next_type = self._lexer.peek_token()
                    
                    while next_type == "COMMA":
                        self._expect("COMMA")
                        self._parse_vfpdef()

                        _, next_type = self._lexer.peek_token()

                        if next_type == "EQUAL":
                            self._expect("EQUAL")
                            self._parse_test()
                            _, next_type = self._lexer.peek_token()

                elif next_type == "ASTERISK":
                    self._expect("ASTERISK")
                    _, next_type = self._lexer.peek_token()

                    if next_type in vfpdef_first_set:
                        self._parse_vfpdef()
                        _, next_type = self._lexer.peek_token()
                    
                    if next_type == "COMMA":
                        self._expect("COMMA")
                        
                        _, next_type = self._lexer.peek_token()

                        if next_type in vfpdef_first_set:
                            self._parse_vfpdef()

                            _, next_type = self._lexer.peek_token()

                            if next_type == "EQUAL":
                                self._expect("EQUAL")
                                self._parse_test()
                                _, next_type = self._lexer.peek_token()
                            
                            while next_type == "COMMA":
                                self._expect("COMMA")
                                self._parse_vfpdef()

                                _, next_type = self._lexer.peek_token()

                                if next_type == "EQUAL":
                                    self._expect("EQUAL")
                                    self._parse_test()
                                    _, next_type = self._lexer.peek_token()

                        elif next_type == "POWER":
                            self._expect("POWER")
                            self._parse_vfpdef()
                            _, next_type = self._lexer.peek_token()

                            if next_type == "COMMA":
                                self._expect("COMMA")

                        else:
                            self._syntax_error(vfpdef_first_set + [ "POWER" ], next_type)

                elif next_type == "POWER":
                    self._expect("POWER")
                    self._parse_vfpdef()
                    _, next_type = self._lexer.peek_token()

                    if next_type == "COMMA":
                        self._expect("COMMA")

                else:
                    self._syntax_error(vfpdef_first_set + [ "ASTERISK", "POWER" ], next_type)
    
    def _parse_vfpdef(self):
        self._expect("NAME")
    
    def _parse_stmt(self):
        simple_stmt_first_set = []
        compound_stmt_first_set = []

        _, next_type = self._lexer.peek_token()

        if next_type in simple_stmt_first_set:
            self._parse_simple_stmt()
        elif next_type in compound_stmt_first_set:
            self._parse_compound_stmt()
        else:
            self._syntax_error(simple_stmt_first_set + compound_stmt_first_set, next_type)
    
    def _parse_simple_stmt(self):
        self._pare_small_stmt()
        _, next_type = self._lexer.peek_token()
        small_stmt_first_set = []

        while next_type == "SEMICOLON":
            self._expect("SEMICOLON")
            _, next_type = self._lexer.peek_token()

            if next_type in small_stmt_first_set:
                self._parse_small_stmt()
                _, next_type = self._lexer.peek_token()
            else:
                break

        self._expect("NEWLINE")

    def _parse_small_stmt(self):
        expr_stmt_first_set = []
        del_stmt_first_set = []
        pass_stmt_first_set = []
        flow_stmt_first_set = []
        import_stmt_first_set = []
        global_stmt_first_set = []
        nonlocal_stmt_first_set = []
        assert_stmt_first_set = []

        _, next_type = self._lexer.peek_token()

        if next_type in expr_stmt_first_set: self._parse_expr_stmt()
        elif next_type in del_stmt_first_set: self._parse_del_stmt()
        elif next_type in pass_stmt_first_set: self._parse_pass_stmt()
        elif next_type in flow_stmt_first_set: self._parse_flow_stmt()
        elif next_type in import_stmt_first_set: self._parse_import_stmt()
        elif next_type in global_stmt_first_set: self._parse_global_stmt()
        elif next_type in nonlocal_stmt_first_set: self._parse_nonlocal_stmt()
        elif next_type in assert_stmt_first_set: self._parse_assert_stmt()
        else:
            self._syntax_error(
                expr_stmt_first_set
                + del_stmt_first_set
                + pass_stmt_first_set
                + flow_stmt_first_set
                + import_stmt_first_set
                + global_stmt_first_set
                + nonlocal_stmt_first_set
                + assert_stmt_first_set
                , next_type
            )

    def _parse_expr_stmt(self):
        self._parse_testlist_star_expr()
        annassign_first_set = []
        augassign_first_set = []
        yeild_expr_first_set = []
        testlist_first_set = []

        _, next_type = self._lexer.peek_token()

        if next_type in annassign_first_set:
            self._parse_annasign()
        elif next_type in augassign_first_set:
            self._parse_augassign()
            _, next_type = self._lexer.peek_token()

            if next_type in yeild_expr_first_set:
                self._parse_yield_expr()
            elif next_type in testlist_first_set:
                self._parse_testlist()
            else:
                self._parse_syntax_error(yeild_expr_first_set + testlist_first_set, next_type)
            
        elif next_type == "EQUAL":
            while next_type == "EQUAL":
                self._expect("EQUAL")
                _, next_type = self._lexer.peek_token()

                if next_type in yeild_expr_first_set:
                    self._parse_yield_expr()
                else:
                    self._parse_testlist_star_expr()
                
                _, next_type = self._lexer.peek_token()
            
            if next_type == "STRING":
                self._expect("STRING")
    
    def _parse_annasign(self):
        self._expect("COLON")
        self._parse_test()
        _, next_type = self._lexer.peek_token()
        yeild_expr_first_set = []

        if next_type == "EQUAL":
            self._expect("EQUAL")
            _, next_type = self._lexer.peek_token()

            if next_type in yeild_expr_first_set:
                self._parse_yeild_expr()
            else:
                self._parse_testlist_star_expr()
    
    def _parse_testlist_star_expr(self):
        test_first_set = []
        star_expr_first_set = []
        _, next_type = self._lexer.peek_token()

        if next_type in testlist_first_set:
            self._parse_test()
        elif next_type in star_expr_first_set:
            self._parse_star_expr()
        else:
            self._syntax_error(test_first_set + star_expr_first_set, next_type)
        
        _, next_type = self._lexer.peek_token()

        while next_type == "COMMA":
            self._expect("COMMA")
            _, next_type = self._lexer.peek_token()

            if next_type in testlist_first_set:
                self._parse_test()
            elif next_type in star_expr_first_set:
                self._parse_star_expr()
            else:
                break
            
            _, next_type = self._lexer.peek_token()
    
    def _parse_augassign(self):
        self._expect([
            "PLUS_EQUALS",
            "MINUS_EQUALS",
            "TIMES_EQUALS",
            "AT_EQUALS",
            "DIVIDE_EQUALS",
            "MODULUS_EQUALS",
            "AND_EQUALS",
            "OR_EQUALS",
            "XOR_EQUALS",
            "SHIFT_LEFT_EQUALS",
            "SHIFT_RIGHT_EQUALS",
            "POWER_EQUALS",
            "FLOOR_DIVIDE_EQUALS"
        ])
    
    def _parse_del_stmt(self):
        self._expect("DEL")
        self._parse_expr_list()
    
    def _parse_pass_stmt(self):
        self._expect("PASS")
    
    def _parse_flow_stmt(self):
        break_stmt_first_set = []
        continue_stmt_first_set = []
        return_stmt_first_set = []
        raise_stmt_first_set = []
        yeild_stmt_first_set = []

        _, next_type = self._lexer.peek_token()

        if next_type in break_stmt_first_set:
            self._parse_break_stmt()
        elif next_type in continue_stmt_first_set:
            self._parse_continue_stmt()
        elif next_type in return_stmt_first_set:
            self._parse_return_stmt()
        elif next_type in raise_stmt_first_set:
            self._parse_raise_stmt()
        elif next_type in yeild_stmt_first_set:
            self._parse_yeild_stmt()
        else:
            self._syntax_error(
                break_stmt_first_set
                + continue_stmt_first_set
